# snake_game_sfml_remade

./: CMakeLists.txt  Game.cpp  Game.h  Snake.cpp  Snake.h  SnakeFood.cpp  SnakeFood.h  main.cpp
